// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchBuilder nested operations generates move patch for renamed nested field 1`] = `
[
  {
    "fieldName": "nested.newName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/nested/properties/oldName",
      "op": "move",
      "path": "/properties/nested/properties/newName",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder nested operations generates moves and replaces when parent and child are both renamed with description added 1`] = `
[
  {
    "fieldName": "newParent",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/oldParent",
      "op": "move",
      "path": "/properties/newParent",
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "parent desc",
      },
    ],
  },
  {
    "fieldName": "newParent",
    "patch": {
      "op": "replace",
      "path": "/properties/newParent",
      "value": {
        "additionalProperties": false,
        "description": "parent desc",
        "properties": {
          "newChild": {
            "default": "",
            "description": "child desc",
            "type": "string",
          },
        },
        "required": [
          "newChild",
        ],
        "type": "object",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "parent desc",
      },
    ],
    "typeChange": undefined,
  },
  {
    "fieldName": "newParent.newChild",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/newParent/properties/oldChild",
      "op": "move",
      "path": "/properties/newParent/properties/newChild",
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "child desc",
      },
    ],
  },
  {
    "fieldName": "newParent.newChild",
    "patch": {
      "op": "replace",
      "path": "/properties/newParent/properties/newChild",
      "value": {
        "default": "",
        "description": "child desc",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "child desc",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder nested operations generates multiple patches for multiple changes in one object 1`] = `
[
  {
    "fieldName": "nested.fieldA",
    "patch": {
      "op": "replace",
      "path": "/properties/nested/properties/fieldA",
      "value": {
        "default": "modified",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "a",
        "property": "default",
        "to": "modified",
      },
    ],
    "typeChange": undefined,
  },
  {
    "fieldName": "nested.fieldD",
    "patch": {
      "op": "add",
      "path": "/properties/nested/properties/fieldD",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "nested.fieldB",
    "patch": {
      "op": "remove",
      "path": "/properties/nested/properties/fieldB",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder nested operations generates replace patch for nested field modification 1`] = `
[
  {
    "fieldName": "nested.value",
    "patch": {
      "op": "replace",
      "path": "/properties/nested/properties/value",
      "value": {
        "default": 20,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": 10,
        "property": "default",
        "to": 20,
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder nested operations generates two move patches when parent and child are both renamed 1`] = `
[
  {
    "fieldName": "newParent",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/oldParent",
      "op": "move",
      "path": "/properties/newParent",
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "newParent.newChild",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/newParent/properties/oldChild",
      "op": "move",
      "path": "/properties/newParent/properties/newChild",
    },
    "propertyChanges": [],
  },
]
`;
